# cpp-interpteter

./: sample.txt  stack.yaml
cpp/: cppinterpreter.cabal  hw2.cabal
cpp/app/: Main.hs
cpp/src/: CppDsl.hs  Interpretator.hs  Lexer.x  Lib.hs  Parser.y  Printer.hs  Type.hs
cpp/test/: InterpretTest.hs  PrintTest.hs  Spec.hs  TestUtil.hs
