name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md, src/Lexer.x, src/Parser.y
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parser, Lexer, CppDsl, Type, Interpretator, Printer
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , array
  build-tools:         alex
                     , happy
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
                     , directory
  default-language:    Haskell2010
